--- a/roomone.html
+++ b/roomone.html
@@ -126,6 +126,11 @@ a:visited
        }
 
        </script>
+      
+       <audio src="living_space.mp3" controls autoplay>
+      audio is not supported.
+    </audio>
+      
    </body>
 
 </html>
