--- a/roomone.html
+++ b/roomone.html
@@ -12,7 +12,9 @@ background-size: cover;
 audio
 {
 position: absolute;
-    top: 100.2%;
+    top: 200%;
+   left: 50%;
+   transform: translateX(-50%)
 }
 
 @font-face {
