--- a/roomone.html
+++ b/roomone.html
@@ -14,7 +14,7 @@ audio
 position: absolute;
     top: 200%;
    left: 50%;
-   transform: translateX(-50%)
+   transform: translateX(-50%);
 }
 
 @font-face {
