--- a/roomone.html
+++ b/roomone.html
@@ -125,8 +125,10 @@ a:visited
      <div class="next">
         <a href="url"> next room </a>
        </div>
-       <h2 id="return"> congratulations! you can now mute the audio! now be a good intruder and scroll back up. there's nothing else for you. </h2>
-       <script>
+       <div class="return">
+       <h2> congratulations! you can now mute the audio! now be a good intruder and scroll back up. there's nothing else for you. </h2>
+       </div>
+          <script>
        document.getElementById("floor").onclick = function() {floor()};
        function floor() {
        alert("These links will lead to notes that guide the viewer on how to most efficiently rob the place. There will be embedded links to webpages of other rooms.");
