--- a/roomone.html
+++ b/roomone.html
@@ -30,7 +30,7 @@ position: absolute;
     top: 250%;
     left: 50%;
 transform: translateX(-50%);
-   align:center;
+   text-align: center;
 }      
       
 .floor{
