--- a/roomone.html
+++ b/roomone.html
@@ -127,7 +127,7 @@ a:visited
         <a href="url"> next room </a>
        </div>
        <div class="return">
-       <h2> congratulations! you can now mute the audio if you want! now be a good intruder and scroll back up. there's nothing else here for you. </h2>
+       <h2> congratulations! you found the audio controls! now be a good intruder and scroll back up. there's nothing else here for you. </h2>
        </div>
           <script>
        document.getElementById("floor").onclick = function() {floor()};
