--- a/roomone.html
+++ b/roomone.html
@@ -149,7 +149,7 @@ a:visited
 
        </script>
       
-       <audio src="living_space.mp3" controls autoplay loop>
+       <audio src="living_space.mp3" loop controls autoplay>
       audio is not supported.
     </audio>
       
