--- a/end.html
+++ b/end.html
@@ -195,7 +195,7 @@ h2:hover{
 
        document.getElementById("drawer").onclick = function() {drawer()};
        function drawer() {
-       alert("If you’re all done, go right ahead and click leave! (*＾▽＾)／Then you can start making your way to the living space and we’ll bid our farewell?(｡◝‿◜｡)");
+       alert("If you’re all done, go right ahead and click the go back button! (*＾▽＾)／Then you can start making your way to the living space and we’ll bid our farewell?(｡◝‿◜｡)");
        }
 
        document.getElementById("gfloor").onclick = function() {gfloor()};
