--- a/livingspace.html
+++ b/livingspace.html
@@ -244,10 +244,10 @@ h2:hover{
        }
        document.getElementById("gdoor").onclick = function() {gdoor()};
        function gdoor() {
-       alert("Mom thought she saw scuff marks on the lock. She thought someone tampered with it. I wonder if it’s because of that.");
+       alert("Mom thought she saw scuff marks on the lock. She said someone tampered with it. I wonder if it’s because of that.");
      } document.getElementById("gdrawer").onclick = function() {gdrawer()};
         function gdrawer() {
-        alert("I kept ‘Buck’ by my bedside for the first month, when I’d stay awake completing on homework.");
+        alert("I kept ‘Buck’ by my bedside for the first month, when I’d stay awake completing homework.");
       } document.getElementById("gmirror").onclick = function() {gmirror()};
          function gmirror() {
          alert("this is about the time my house was broken into lol");
