--- a/livingspace.html
+++ b/livingspace.html
@@ -231,7 +231,7 @@ h2:hover{
        }
        document.getElementById("mirror").onclick = function() {mirror()};
        function mirror() {
-       alert("Hello intruder! ヾ(o✪‿✪o)ｼ Oh, I’m sorry did I offend you? You did break in here, I’m merely calling a spade a spade…. (ಥ﹏ಥ) Sorry let’s start again, I’m not here to fight. I’m here to help guide you around the space to warn you of obstacles that could hinder your looting efficiency! ｜*￣∇￣｜ Click on text like this to learn more about the space ;P Oh and if you see another mirror, come say hi! (´ｖ｀) It gets boring here with just the guard (ρﾟ∩ﾟ)");
+       alert("Hello intruder! ヾ(o✪‿✪o)ｼ Oh, I’m sorry did I offend you? You did break in here, I’m merely calling a spade a spade…. (ಥ﹏ಥ) Sorry let’s start again, I’m not here to fight. I’m here to help guide you around the space to warn you of obstacles that could hinder your looting efficiency! ｜*￣∇￣｜ Click on text like this to learn more about the space. Oh and if you see another mirror, come say hi! (´ｖ｀) It gets boring here with just the guard (ρﾟ∩ﾟ)");
        }
        document.getElementById("drawer").onclick = function() {drawer()};
        function drawer() {
