--- a/bedroom.html
+++ b/bedroom.html
@@ -208,7 +208,7 @@ h2:hover{
        alert("I stay awake here more than I sleep.");
      } document.getElementById("gdrawer").onclick = function() {gdrawer()};
         function gdrawer() {
-        alert("These curtains haven’t been drawn since I got here.");
+        alert("These curtains haven’t been drawn open since I got here.");
       }
        </script>
 
